force-app/main/default/objects/ContentVersion/fields/avnio__ContentDocumentTemplateId__c.field-meta.xml
<CustomField>
    <fullName>avnio__ContentDocumentTemplateId__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Content Document/Template Id</label>
    <type>Text</type>
</CustomField>