force-app/main/default/objects/ContentVersion/fields/avnio__IsActive__c.field-meta.xml
<CustomField>
    <fullName>avnio__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>