force-app/main/default/objects/ContentVersion/fields/avnio__IsTemplate__c.field-meta.xml
<CustomField>
    <fullName>avnio__IsTemplate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Template</label>
    <type>Checkbox</type>
</CustomField>